--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@
   text-align: center;
 }
 
+body{
+  background-color:aliceblue;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -48,5 +52,11 @@
 
 
 table, th, td {
-  border: 1px solid black;
+  color: black;
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+  
+}
+table{
+  border-radius: 10px;
 }
