--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,16 @@ body{
 
 
 table, th, td {
+  border: 1px solid white;
+  padding-left: 5px;
+  padding-right: 5px;
   color: black;
   font-family: "Nunito", sans-serif;
+  
+}
+table, th {
+  width: 500px;
+
   
 }
 table{
