--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body{
 
 
 table, th, td {
-  border: 1px solid white;
+  border: 1px solid #FAFAFA;
   padding-left: 5px;
   padding-right: 5px;
   color: black;
@@ -60,6 +60,7 @@ table, th, td {
   
 }
 table, th {
+
   width: 500px;
 
   
