--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  width: 100%;
+}
+html,#root {
+  width: 100%;
+}
+html{
+  font-size: 16px;
 }
 
 h1 {
